sections/Home/Home.module.scss
@media only screen and (min-width: 250px) {
  .home {
    flex-direction: column;
    flex-wrap: wrap-reverse;
    width: 100vw;
    height: 100vh;
    top: 25px;
    padding: 25px;

    .leftContent {
      width: 100vw;
      margin: 0 auto;

      .portrait {
        width: 100%;
        min-width: 300px;
        max-width: 400px;
        left: 0;
      }
    }
  }
}

@media only screen and (min-width: 1100px) {
  .home {
    width: 100vw;
    height: 100%;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex-wrap: nowrap;
    padding: 100px;

    .leftContent {
      background: none;
      margin-top: 80px;
      padding: 70px 40px;
      text-align: center;

      .portrait {
        max-width: 800px;
        min-width: 500px;
      }
    }

    .rightContent {
      width: 100vw;
      margin-top: 0;
      padding: 70px 40px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;

      .bottom {
        display: flex;
        flex-direction: row;
        margin-top: 20px;
        min-height: 30px;
        width: 100%;

        .socialButton {
          margin: 10px;

          .socialIcon {
            width: 30px;
            height: 30px;
          }
        }
      }
    }
  }
}

.home {
  width: 100vw;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  .leftContent {
    width: 43vw;
  }
}

